fix: testing wrap on action container textbox.

--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,7 @@ img {
 
 .container-action .content .textbox {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
     gap: 5px;
